--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,9 +24,8 @@ jobs:
 
       - name: Install gke-gcloud-auth-plugin
         run: |
-          curl -LO https://storage.googleapis.com/gke-gcloud-auth-plugin/$(uname | tr '[:upper:]' '[:lower:]')/gke-gcloud-auth-plugin
-          sudo mv gke-gcloud-auth-plugin /usr/local/bin/
-          sudo chmod +x /usr/local/bin/gke-gcloud-auth-plugin
+          sudo apt-get update
+          sudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin
 
       - name: Configure Docker auth for Artifact Registry
         run: |
@@ -46,7 +45,7 @@ jobs:
 
       - name: Get GKE credentials
         run: |
-          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} --region ${{ secrets.GCP_REGION }}
+          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} --region ${{ secrets.GCP_REGION }} --project ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Deploy to GKE
         run: |
